--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ body {
 .container {
   position: relative;
   width: 100%;
+  padding-right: 29px;
 }
 
 .sample {
@@ -14,8 +15,16 @@ body {
   border-color: black;
 }
 
+.header {
+  height: 85px;
+}
+
 .header > div {
   display: inline-block;
+}
+
+.header:after {
+  clear: both;
 }
 
 .sample:last-child {
@@ -31,32 +40,90 @@ body {
 
 .nav {
   padding: 0;
+  vertical-align: bottom;
 }
 
 #slide-text {
   position: absolute;
-  top: 340px;
-  left: 400px;
+  top: 360px;
+  left: 350px;
   width: 250px;
   height: 50px;
   z-index: 100;
   background-color: rgba(255,0,0,0);
+  color: white;
+  font-family: arial, helvetica, sans-serif;
+  font-size: 1.75em;
+  text-align: right;
+
 }
 
-ul.nav {
-  position: relative;
+.nav ul {
+  margin-top: 10px;
   float: right;
+  display: block;
+  vertical-align: bottom;
+  overflow: hidden;
+}
+.nav ul:after {
+  clear: both;
 }
 
-ul.nav li{
+.nav .logo {
+  position: relative;
+  width: 85px;
+  height: 65px;
+  background-color: rgb(255,255,255);
+  transform: skewX(-15deg);
+  -webkit-transform: skewX(-15deg);
+}
+
+.nav ul li{
+  position: relative;
+  left: 10px;
   display: inline-block;
-  float: left;
-  width: 110px;
+  margin: 0;
+  width: 85px;
   height: 65px;
   text-align: center;
   border: 1px solid #000000;
   text-transform: uppercase;
-  background-color: white;
-  transform: skewX(-45deg);
-  -webkit-transform: skewX(-45deg);
+  background-color: rgb(76,76,76);
+  transform: skewX(-15deg);
+  -webkit-transform: skewX(-15deg);
+  text-align: center;
 }
+
+.nav ul li img {
+  position: relative;
+  top: 20%;
+}
+
+.nav ul li span {
+  position: relative;
+  top: 30%;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.nav ul li .text {
+  position: absolute;
+  top: 50%;
+  vertical-align: middle;
+}
+
+.nav ul a {
+  text-decoration: none;
+  color: white;
+}
+
+.nav ul li.highlight {
+  background-color: rgb(255,255,255);
+  color: cyan;
+}
+
+.nav ul li.last {
+  position: relative;
+  top: 9px;
+}
+
